Opened 12 years ago
Closed 12 years ago
#5166 closed bug (fixed)
media_addon_server failed to restart
Reported by: | cssvb94 | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Servers/media_addon_server | Version: | R1/alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
GCC4 build hrev34759, media_addon_server fails to restart. Pop-up message for debug shows up. GDB backtrace attached.
Attachments (1)
Change History (3)
by , 12 years ago
Attachment: | media_addon_server_bt.txt added |
---|
comment:1 by , 12 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:2 by , 12 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Note:
See TracTickets
for help on using tickets.
Should be fixed in hrev34906.