* The static object construction and destruction is no longer random, but takes   the internal dependencies into account. This should fix bugs #5166, #5120,   and #5150. * Also, the time source object manager, as well as the dormant node manager   are now recreated on media roster restart (when the media server is   restarted).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@34906 a95241bf-73f2-0310-859d-f6bbb57e9c96